erDiagram
    USER ||--o{ CUSTOMER : "created_by"
    USER ||--o{ CUSTOMER : "updated_by"
    USER ||--o{ AUDIT_LOG : "user"
    USER }|--|| ROLE : "M:N via UserRole"
    ROLE ||--o{ PERMISSION : "role"

    USER {
        string username PK
        string email
        string password_hash
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    CUSTOMER {
        int id PK
        string name
        string phone
        string email
        text address
        int created_by FK
        datetime created_at
        int updated_by FK
        datetime updated_at
        text notes
    }

    ROLE {
        string name PK
        text description
    }

    PERMISSION {
        int id PK
        string role FK
        string name
        string code
    }

    AUDIT_LOG {
        int id PK
        int user FK
        string action
        text details
        string ip_address
        datetime created_at
    }